classDiagram
    %% Enum 定義は docs/MMD03_Enum.mmd を参照
    namespace CoreDomain {
        %% Player の基本情報
        class Player {
            <<Entity>>
            +PlayerId Id
            +string Name
            +Job Job
            +int Level
            +int Exp
            +Status Status
            +MoveSet MoveSet
            +UpdateName(name: string) void
            +UpdateJob(job: Job) void
            +UpdateStatus(status: Status) void
            +UpdateMoveSet(moveSet: MoveSet) void
            -ValidateName(name: string) string
            +GainExp(exp: int) void
            +LevelUp(growthValueRepository: IGrowthValueRepository) bool
        }

        class PlayerId {
            <<Value Object>>
            +Guid Id
        }

        class Status {
            <<Value Object>>
            +int MaxHp
            +int MaxMp
            +int Strength
            +int Defense
            +int Intelligence
            +int Luck
            +int Speed
        }

        class GrowthValue {
            <<Value Object>>
            +int MaxHp
            +int MaxMp
            +int Strength
            +int Defense
            +int Intelligence
            +int Luck
            +int Speed
        }

        class MoveSet {
            <<Value Object>>
            +IReadOnlyList~MoveId?~ Slots
            +SetSlot(index: int, moveId: MoveId?) void
            +GetSlot(index: int) MoveId?
            +GetLearnedMoveIds() IReadOnlyList~MoveId~
            +GetFirstEmptySlotIndex() int?
            +ClearSlot(index: int) void
            +SwapSlots(fromIndex: int, toIndex: int) void
        }

        class IPlayerRepository {
            +Task~Player?~ GetPlayerAsync(id: PlayerId)
            +Task~bool~ UpdateNameAsync(id: PlayerId, name: string)
            +Task~DateTimeOffset?~ TryStartTrainingCooldownAsync(id: PlayerId, nowUtc: DateTimeOffset, cooldown: TimeSpan)
            +Task SaveAsync(player: Player)
        }

        class IGrowthValueRepository {
            +GrowthValue GetByJob(job: Job)
        }
    }

    namespace ChatDomain {
        %% ルームチャット機能
        class ChatRoom {
            <<Aggregate Root>>
            +PlayerId OwnerId
            +int LastChatId
            -List~ChatMessage~ _messages
            +IReadOnlyList~ChatMessage~ Messages
            +ChatRoom(ownerId: PlayerId, lastChatId: int, messages: IEnumerable~ChatMessage~)
            +GetNextMessageId() : int
            +PostMessage(senderId : PlayerId, text : string) : void
            +RestoreMessages(messages: IEnumerable~ChatMessage~) : void
            +EnforceMessageLimit() : void
        }

        class ChatMessage {
            <<Entity>>
            +PlayerId SenderId
            +int ChatId
            +ChatText Body
            +DateTimeOffset CreatedAt
        }

        class ChatText {
            <<Value Object>>
            +string Text
            -ValidateMessage() : string
        }

        class IChatRoomRepository {
            +Task~ChatRoom~ GetChatRoomAsync(ownerId: PlayerId)
            +Task SaveAsync(room: ChatRoom)
        }

        class ChatRoomView {
            <<Read Model>>
            +PlayerId OwnerId
            +int LastChatId
            +IReadOnlyList~ChatMessageView~ Messages
        }

        class ChatMessageView {
            <<Read Model>>
            +int ChatId
            +string SenderName
            +string Message
            +DateTimeOffset CreatedAt
        }

        class ChatService {
            <<Application Service>>
            +Task EnsureRoomAsync(ownerId: PlayerId)
            +Task~ChatRoomView~ GetRoomAsync(ownerId: PlayerId)
            +Task~ChatRoomView~ PostMessageAsync(ownerId: PlayerId, senderId: PlayerId, text: string)
        }
    }

    namespace TrainingDomain {
        %% トレーニングモード
        class TrainingEnemy {
            <<Entity>>
            +TrainingEnemyId Id
            +string Name
            +string ImagePath
            +int Level
            +Status Status
            -ValidateName(name: string) string
        }

        class TrainingEnemyId {
            <<Value Object>>
            +int Id
        }

        class ITrainingEnemyRepository {
            +Task~TrainingEnemy?~ GetTrainingEnemyAsync(id: TrainingEnemyId)
            +Task~IReadOnlyList~TrainingEnemy~~ GetTrainingEnemiesAsync()
        }

        class TrainingService {
            <<Application Service>>
            +GetTrainingEnemies() TrainingEnemyView[]
            +ExecuteTraining(playerId : PlayerId, enemyId : TrainingEnemyId) TrainingResultView
            -ExecuteTurn(player Player, enemy : TrainingEnemy, turnResult : TurnResult) TurnResult
            -CalcExp(player Player, enemy : TrainingEnemy, turnResult : TurnResult) int
            -ApplyExp(player Player, exp : int) bool
        }

        class TurnResult {
            +int Turn
            +int CurrentPlayerHp
            +int CurrentEnemyHp
        }

        class TrainingEnemyView {
            <<Read Model>>
            +string Name
            +string ImagePath
            +int Level
        }

        class TrainingResultView {
            <<Read Model>>
            +string TrainingResult
            +int Turn
            +int CurrentPlayerHp
            +int MaxPlayerHp
            +int CurrentEnemyHp
            +int MaxEnemyHp
            +int Exp
            +bool IsLevelUp
        }
    }

    namespace MoveDomain {
        %% 技データ
        class Move {
            <<Aggregate Root>>
            +MoveId Id
            +string Name
            +string Description
            +TargetType TargetType
            +AttackRange AttackRange
            +int MpCost
            +int ExecutionPriority
            +MoveCategory Category
            +IReadOnlyList~MoveEffect~ Effects
            +Validate() void
            +GetOrderedEffects() IReadOnlyList~MoveEffect~
            -ValidateName(name: string) string
            -ValidateMpCost(mpCost: int) int
        }

        class MoveId {
            <<Value Object>>
            +int Id
            -Validate(id: int) int
        }

        class MoveEffect {
            <<Entity>>
            +MoveEffectId EffectId
            +MoveId MoveId
            +int Sequence
            +MoveEffectType EffectType
            +DamageEffect? Damage
            +AilmentEffect? Ailment
            +BuffEffect? Buff
            +ValidateByType() void
            -ValidateOnlyDamage() void
            -ValidateOnlyAilment() void
            -ValidateOnlyBuff() void
            -ValidateSequence(sequence: int) int
        }

        class MoveEffectId {
            <<Value Object>>
            +int Id
            -Validate(id: int) int
        }

        class DamageEffect {
            <<Value Object>>
            +int HitCount
            +decimal PowerRate
            +int FixedValue
            +decimal CriticalRate
            +ElementType ElementType
            -ValidateHitCount(hitCount: int) int
            -ValidateFixedValue(fixedValue: int) int
            -ValidateRateRange(value: decimal, paramName: string) decimal
            -ValidateNonNegative(value: decimal, paramName: string) decimal
        }

        class AilmentEffect {
            <<Value Object>>
            +AilmentType AilmentType
            +decimal AilmentRate
            -ValidateRateRange(value: decimal) decimal
        }

        class BuffEffect {
            <<Value Object>>
            +BuffStat BuffStat
            +BuffOp BuffOp
            +decimal BuffValue
            +int BuffTurns
            +decimal BuffRate
            +bool CanStack
            -ValidateBuffValue(value: decimal, op: BuffOp) decimal
            -ValidateTurns(turns: int) int
            -ValidateRateRange(value: decimal) decimal
        }

        class IMoveRepository {
            +Task~Move?~ GetMoveAsync(moveId: MoveId)
            +Task~IReadOnlyList~Move~~ GetAllMovesAsync()
        }

    }

    %% Core
    Player *-- PlayerId : has
    Player *-- Status : has
    Player *-- MoveSet : has
    Player ..> IGrowthValueRepository : uses at LevelUp
    IGrowthValueRepository ..> GrowthValue : returns
    IPlayerRepository ..> Player : stores/loads

    %% Chat
    ChatRoom *-- ChatMessage : 0..50
    ChatMessage *-- ChatText : has
    IChatRoomRepository ..> ChatRoom : stores/loads
    ChatService ..> ChatMessageView : builds
    ChatService ..> ChatRoomView : builds
    ChatService ..> IChatRoomRepository : use
    ChatService ..> IPlayerRepository : resolve sender name

    %% Training
    TrainingEnemy *-- Status : has
    TrainingEnemy *-- TrainingEnemyId : has
    ITrainingEnemyRepository --> TrainingEnemy : loads
    TrainingService ..> IPlayerRepository : use
    TrainingService ..> ITrainingEnemyRepository : use
    TrainingService ..> IGrowthValueRepository : use
    TrainingService ..> TurnResult : use
    TrainingService ..> TrainingResultView : has
    TrainingService ..> TrainingEnemyView : has

    %% Move
    Move *-- MoveId : has
    Move *-- MoveEffect : 1..*
    MoveEffect *-- MoveEffectId : has
    MoveEffect *-- DamageEffect : optional
    MoveEffect *-- AilmentEffect : optional
    MoveEffect *-- BuffEffect : optional
    IMoveRepository ..> Move : loads
